--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -23,3 +23,11 @@
   color: "#000";
   background-color: "#f4f4f4";
 }  */
+
+.contentStyle  {
+  text-align: center;
+  min-height: 120;
+  line-height: 120px;
+  color: #000;
+  background-color: #f4f4f4;
+};
