--- a/src/pages/PageLogin/index.less
+++ b/src/pages/PageLogin/index.less
@@ -1,4 +1,11 @@
 .login {
+    // 添加卡片样式，加阴影
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 80px;
+    padding-bottom: 40px;
+    border-radius: 20px;
     h2 {
         margin: 0;
         padding: 0;
